added jwt security and tests, and mock user