@@ -1,5 +1,6 @@
 package pl.lotto.infrastructure.apivalidation;
 
+import lombok.extern.log4j.Log4j2;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -12,21 +13,19 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @ControllerAdvice
+@Log4j2
 public class ApiValidationErrorHandler {
 
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseBody
-    public ApiValidationErrorDto handleValidationExceptions(MethodArgumentNotValidException exception) {
-        final List<String> errors = getErrorsFromException(exception);
-        return new ApiValidationErrorDto(errors, HttpStatus.BAD_REQUEST);
-    }
-
-    private List<String> getErrorsFromException(MethodArgumentNotValidException exception) {
-        return exception.getBindingResult()
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ApiValidationErrorDto f(MethodArgumentNotValidException exception) {
+        List<String> errors = exception.getBindingResult()
                 .getAllErrors()
                 .stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
+        log.error(errors.toString());
+        return new ApiValidationErrorDto(errors, HttpStatus.BAD_REQUEST);
     }
 }
